# geoproc3

./: .clang-format  CMakeLists.txt
apps/: bvh_playground.cpp  plane_clipping.cpp  plane_clipping2.cpp  raytracing.cpp
include/: aabb.hpp  bvh.hpp  ray.hpp  ray_aabb_intersection.hpp  stl_io.hpp  triangle.hpp  vec3.hpp
src/: bvh.cpp  stl_io.cpp  vec3.cpp
